New volume option...
And confirmation volume works as-is on Windows